--- a/composer.json
+++ b/composer.json
@@ -103,6 +103,7 @@
         "symfony/debug-bundle": "7.3.*",
         "symfony/maker-bundle": "^1.64",
         "symfony/stopwatch": "7.3.*",
-        "symfony/web-profiler-bundle": "7.3.*"
+        "symfony/web-profiler-bundle": "7.3.*",
+        "symfonycasts/tailwind-bundle": "^0.11.1"
     }
 }
